slightly diff mongo url

--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT=3500
-MONGO_URL=mongodb+srv://digitalchief:digitalchief@cluster0.ilyyqux.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://digitalchief:digitalchief@cluster0.ilyyqux.mongodb.net/digatchief-db?retryWrites=true&w=majority
